@@ -34,11 +34,20 @@ PDH_STATUS	zbx_PdhMakeCounterPath(const char *function, PDH_COUNTER_PATH_ELEMENT
 
 	if (ERROR_SUCCESS != (pdh_status = PdhMakeCounterPath(cpe, wcounterPath, &dwSize, 0)))
 	{
-		zabbix_log(LOG_LEVEL_ERR, "%s(): cannot make counterpath '%s': %s",
-				function, counterpath, strerror_from_module(pdh_status, L"PDH.DLL"));
-	}
+		char	*object, *counter;
 
-	zbx_unicode_to_utf8_static(wcounterPath, counterpath, PDH_MAX_COUNTER_PATH);
+		object = zbx_unicode_to_utf8(cpe->szObjectName);
+		counter = zbx_unicode_to_utf8(cpe->szCounterName);
+
+		zabbix_log(LOG_LEVEL_ERR, "%s(): cannot make counterpath for \"\\%s\\%s\": %s",
+				function, object, counter, strerror_from_module(pdh_status, L"PDH.DLL"));
+
+		zbx_free(counter);
+		zbx_free(object);
+	}
+	else
+		zbx_unicode_to_utf8_static(wcounterPath, counterpath, PDH_MAX_COUNTER_PATH);
+
 	zbx_free(wcounterPath);
 
 	return pdh_status;
